# Projects

./: .gitattributes  .gitignore  README.md
DripMonitor-feature-esp32plc/: build_log.txt
DripMonitor-feature-esp32plc/.west/: config
DripMonitor-feature-esp32plc/DripMonitor-feature-esp32plc/: .gitignore  CMakeLists.txt  DripMonitor.code-workspace  Kconfig  README.rst  build_log.txt  generate_version.cmake  prj.conf  west.yml
DripMonitor-feature-esp32plc/DripMonitor-feature-esp32plc/boards/: esp32_plc_21_esp32_procpu.overlay
DripMonitor-feature-esp32plc/DripMonitor-feature-esp32plc/boards/industrialshields/esp32_plc_21/: Kconfig  Kconfig.esp32_plc_21  Kconfig.sysbuild  board.yml  esp32_plc_21-pinctrl.dtsi  esp32_plc_21_esp32_procpu.dts  esp32_plc_21_esp32_procpu.yaml  esp32_plc_21_esp32_procpu_defconfig
DripMonitor-feature-esp32plc/DripMonitor-feature-esp32plc/docs/: cloud state diagram.md  fx30-setup.md  ota-migration.md
DripMonitor-feature-esp32plc/DripMonitor-feature-esp32plc/include/: LK204.cpp  LK204.hpp  PID.cpp  PID.hpp  modbus_rtu.hpp  mqtt_broker.cpp  mqtt_broker.hpp  network.cpp  network.hpp  utility.hpp
DripMonitor-feature-esp32plc/DripMonitor-feature-esp32plc/src/: app_modbus.h  cloud.cpp  cloud.hpp  display.cpp  display.hpp  dripper.cpp  dripper.hpp  error.cpp  hivemq.pem  main.cpp  modbus_config.hpp  modbus_integration_example.cpp  modbus_rtu.cpp  modbus_rtu.h  storage.cpp  storage.hpp  tago-io.pem  version.hpp
DripperDisplay/: .project
DripperDisplay/DripperDisplay/: .mxproject  Riverdi_50STM32U5G9.ioc  backup_Riverdi_50STM32U5G9.ioc
DripperDisplay/DripperDisplay/STM32CubeIDE/: .cproject  .project  Riverdi_50STM32U5G9.launch  STM32U5G9NJHXQ_FLASH.ld  STM32U5G9NJHXQ_RAM.ld
(+389 files in other folders)
